# internal/post/model/post.go
@@ -10,6 +10,7 @@ type Post struct {
 	IdPost   uuid.UUID      `gorm:"primaryKey;type:uuid;default:uuid_generate_v4()"`
 	Title    string         `gorm:"type:varchar(200);not null;index"`
 	Body     string         `gorm:"type:varchar(700);not null"`
+	UrlImage string         `gorm:"type:varchar(700);not null"`
 	IsActive bool           `gorm:"type:bool;default:true"`
 	CreateAt time.Time      `gorm:"default:CURRENT_TIMESTAMP"`
 	DeleteAt gorm.DeletedAt `gorm:"index"`
@@ -19,11 +20,13 @@ type GetPostDto struct {
 	IdPost   uuid.UUID `json:"idPost"`
 	Title    string    `json:"title"`
 	Body     string    `json:"body"`
+	UrlImage string    `json:"urlImage"`
 	IsActive bool      `json:"isActive"`
 	CreateAt time.Time `json:"createAt"`
 }
 
 type PostDto struct {
-	Title string `json:"title" validate:"required,min=5,max=200"`
-	Body  string `json:"body" validate:"required,min=5,max=700"`
+	Title    string `json:"title" validate:"required,min=5,max=200"`
+	Body     string `json:"body" validate:"required,min=5,max=700"`
+	UrlImage string `json:"urlImage" validate:"required,min=5,max=700"`
 }
