# internal/product/model/product.go
@@ -11,6 +11,7 @@ type Product struct {
 	IdProduct   uuid.UUID      `gorm:"primaryKey;type:uuid;default:uuid_generate_v4()"`
 	Name        string         `gorm:"type:varchar(300);not null;index;unique"`
 	Description string         `gorm:"type:varchar(500);not null"`
+	UrlImage    string         `gorm:"type:varchar(500);not null"`
 	IsActive    bool           `gorm:"type:bool;default:true"`
 	CreateAt    time.Time      `gorm:"default:CURRENT_TIMESTAMP"`
 	DeleteAt    gorm.DeletedAt `gorm:"index"`
@@ -20,6 +21,7 @@ type GetProductDto struct {
 	IdProduct   uuid.UUID `json:"idProduct"`
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
+	UrlImage    string    `json:"urlImage"`
 	IsActive    bool      `json:"isActive"`
 	CreateAt    time.Time `json:"createAt"`
 }
@@ -27,4 +29,5 @@ type GetProductDto struct {
 type ProductDto struct {
 	Name        string `json:"name" validate:"required,min=5,max=300"`
 	Description string `json:"description" validate:"required,min=10,max=500"`
+	UrlImage    string `json:"urlImage" validate:"required,min=10,max=500"`
 }
